<resources>
    <string name="app_name">pr18_KachalinSemen_v6</string>
    <string name="reg">Регистрация</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="voity">Войти</string>
    <string name="yourlogin">Ваш логин: </string>
    <string name="yourpassword">Ваш пароль: </string>
    <string name="vixod">Выход</string>
    <string name="name">Имя</string>
    <string name="email">Почта</string>
    <string name="phone">Телефон</string>
    <string name="save">Сохранить</string>
    <string name="openlist">Открыть список</string>
    <string name="sp">Список контактов:</string>
</resources>