<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:background="@color/whitegren">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ButnExit"
        android:background="@drawable/buttons"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vixod"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007" />

    <TextView
        android:id="@+id/TextLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yourlogin"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09" />

    <TextView
        android:id="@+id/TextPassword"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/yourpassword"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.138" />

    <EditText
        android:id="@+id/EditName"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:width="290dp"
        android:height="48dp"
        android:hint="@string/name"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="17sp"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237" />

    <EditText
        android:id="@+id/EditEmail"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:width="290dp"
        android:height="48dp"
        android:hint="@string/email"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="17sp"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.311" />

    <EditText
        android:id="@+id/EditPhone"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:width="290dp"
        android:height="48dp"
        android:hint="@string/phone"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="17sp"
        android:singleLine="true"
        android:inputType="number"
        android:maxLength="12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.396" />

    <androidx.appcompat.widget.AppCompatButton
        android:background="@drawable/buttons"
        android:id="@+id/Save"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:text="@string/save"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.467" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="372dp"
        android:text="@string/sp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <ScrollView
        android:id="@+id/ScrolMenu"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:padding="16dp" />
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
